--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HAAN - Trendy personal care to take along with you</title>
-
+<!-- deployment checking -->
     <style>
       #root{
         overflow-x: hidden;
