--- a/index.html
+++ b/index.html
@@ -25,9 +25,25 @@
 
 </head>
 
-<body>
+<body oncontextmenu="return false;">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <script>
+    document.onkeydown = function (e) {
+      if (event.keyCode == 123) {
+        return false;
+      }
+      if (e.ctrlKey && e.shiftKey && e.keyCode == "I".charCodeAt(0)) {
+        return false;
+      }
+      if (e.ctrlKey && e.shiftKey && e.keyCode == "J".charCodeAt(0)) {
+        return false;
+      }
+      if (e.ctrlKey && e.keyCode == "U".charCodeAt(0)) {
+        return false;
+      }
+    };
+  </script>
 </body>
 
 </html>
